--- a/wafer2-startup-master/client/app.json
+++ b/wafer2-startup-master/client/app.json
@@ -8,7 +8,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#333",
-    "navigationBarTitleText": "腾讯云小程序解决方案",
+    "navigationBarTitleText": "邻里广场",
     "navigationBarTextStyle": "white"
   }
 }
