--- a/wafer2-startup-master/project.config.json
+++ b/wafer2-startup-master/project.config.json
@@ -1,12 +1,28 @@
 {
-	"client": "./client",
-	"svr": "./server",
-	"appid": "wx5d2571786e6cbb49",
-	"projectname": "test",
+	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true
+	},
+	"compileType": "weapp",
+	"libVersion": "1.6.0",
+	"appid": "wx5d2571786e6cbb49",
+	"projectname": "llgc",
+	"miniprogramRoot": "./",
+	"condition": {
+		"weapp": {
+			"current": -1,
+			"list": []
+		},
+		"search": {
+			"current": -1,
+			"list": []
+		},
+		"conversation": {
+			"current": -1,
+			"list": []
+		}
 	}
 }
